GP-46595: Fix collapse background.

--- a/streams/danube/css/customization/_variables.css
+++ b/streams/danube/css/customization/_variables.css
@@ -4,3 +4,7 @@
     Riverlea version: 1.3.8;
     Forked from: Riverlea Thames Aaaaah
  */
+
+:root {
+    --crm-expand-body-bg: var(--crm-form-block-background);
+}
